# AndroidCppUnitTestSample

./: .gitignore  README.md  gradle.properties  settings.gradle
.github/workflows/: main.yml
app/: build.gradle
app/src/androidTest/java/com/suu_lab/androidcppunittestsample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/suu_lab/androidcppunittestsample/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/scripts/: ctest.bat  ctest.sh  test_runner.bat  test_runner.sh
app/src/test/cpp/: CMakeLists.txt  my_test.cpp
app/src/test/java/com/suu_lab/androidcppunittestsample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
